# MoXing

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  BUILD_PROGRESS.md  CHANGELOG.md  CLEANUP_SUMMARY.md  INTEGRATION_COMPLETE.md  KV_CACHE_PERFORMANCE_COMPARISON.md  KV_CACHE_PERFORMANCE_REPORT.md  KV_CACHE_WECHAT_ARTICLE_FINAL.md  KV_CACHE_WECHAT_ARTICLE_FINAL.md.bak  MANIFEST.in  MULTILINGUAL_TOKEN_ANALYSIS.md  OLLAMA_BUILD_REPORT.md  OLLAMA_COMPILATION_REPORT.md  PERFORMANCE_IMPROVEMENT.md  PERFORMANCE_RESULTS.md  README.md  README_CN.md  TURBOQUANT_IMPLEMENTATION.md  UPDATE_FIX_SUMMARY.md  all_models_offload_report.md  all_models_offload_results.json  d.sh  detect_tools.sh  do.sh  do_simple.sh  final_report.md  final_test_report.md  generate_binaries.sh  generate_wheel.sh  get_model_paths.py  gpu0_stdout.txt  kv_cache_results.json  llama_cpp_comprehensive_results.json  llama_cpp_test_report.md  moxing_ollama_final.json  multilingual_v2_carstenuhlig_omnicoder-9b_latest.json  multilingual_v2_gemma3_1b.json  (+28 more)
benchmark_results/: benchmark_20260322_143730.json  benchmark_20260322_144139.json  benchmark_20260322_144817.json  benchmark_20260322_145300.json  benchmark_20260322_final.json  comprehensive_benchmark_20260322.json  context_benchmark_20260322.json
dir/: .msc  README.md  d.sh
docs/: ARCHITECTURE_OLLAMA_RUNNER.md  BINARY_BUILD_STRATEGY.md  BINARY_UPDATE.md  BUILD_COMPLETE.md  BUILD_SUMMARY.md  CODEBASE_ANALYSIS.md  CONTEXT_LENGTH_GUIDE.md  CROSS_PLATFORM_BUILD.md  FINAL_FIX_SUMMARY.md  MONITOR.md  MULTILINGUAL_TOKEN_ANALYSIS_V2.md  PERFORMANCE_FIX_SUMMARY.md  PERFORMANCE_OPTIMIZATION.md  PORT_CONFIGURATION.md  README.md  REALTIME_MONITORING.md  TURBOQUANT_COMMANDS.md  TURBOQUANT_PERFORMANCE_SUMMARY.md  VERBOSE_MONITORING.md  binary_packages.md  binary_release_strategy.md  build_binaries.md  ollama_backend_comparison.md  ollama_backend_quick_reference.md  ollama_backend_test_report.md  omnicoder_final_report.md  wechat-article.md  wechat_article.md  wechat_article_context.md  wechat_article_omnicoder.md
moxing/: __init__.py  backend_installer.py  benchmark.py  binaries.py  cli.py  client.py  device.py  enhanced_monitor.py  gguf_check.py  gguf_compress.py  gguf_metadata.py  kv_cache.py  kv_cache_selector.py  mlx_server.py  models.py  monitor.py  (+9 more)
(+88 files in other folders)
