[build-system]
requires = ["setuptools>=77.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "moxing"
dynamic = ["version"]
description = "Python wrapper for llama.cpp - OpenAI API compatible LLM backend with auto GPU detection"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "MoXing Contributors" },
]
keywords = [
    "llama",
    "llama.cpp",
    "gguf",
    "openai",
    "api",
    "gpu",
    "vulkan",
    "cuda",
    "ai",
    "llm",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "build>=1.0.0",
    "twine>=4.0.0",
]
openai = ["openai>=1.0.0"]
hf = ["huggingface_hub>=0.20.0"]
modelscope = ["modelscope>=1.10.0"]
metal = []
cuda = []
vulkan = []
cpu = []
all = [
    "openai>=1.0.0",
    "huggingface_hub>=0.20.0",
    "modelscope>=1.10.0",
]

[project.scripts]
moxing = "moxing.cli:app"
moxing-download = "moxing.post_install:main"

[project.urls]
Homepage = "https://github.com/cycleuser/MoXing"
Repository = "https://github.com/cycleuser/MoXing"
Issues = "https://github.com/cycleuser/MoXing/issues"

[tool.setuptools.dynamic]
version = { attr = "moxing.__version__" }

[tool.setuptools.packages.find]
include = ["moxing*"]

[tool.setuptools.package-data]
moxing = ["bin/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]